--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
