--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.28.0",
     "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
-    "redux-form": "^8.3.7",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
     "typescript": "^4.4.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zustand": "^3.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2",
+    "@types/redux-form": "^8.3.3"
   }
 }
